--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -14,3 +14,16 @@ jobs:
             run: npm ci
           - name: unit-test
             run: npm run test  
+    build-project:
+        runs-on: ubuntu-latest
+        steps:
+          - name: checking-out the code
+            uses: actions/checkout@v4
+          - name: setup Node
+            uses: actions/setup-node@v4
+            with:
+              node-version: '20'
+          - name: install dependencies
+            run: npm ci
+          - name: build-application
+            run: npm run build            
