--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -35,3 +35,22 @@ jobs:
             run: npm ci
           - name: build-application
             run: npm run build            
+          - name: uploading build
+            uses: actions/upload-artifact@v4
+            with:
+              name: uploading path
+              path: my-path
+            
+    deploy-project:
+      needs: build-project
+      runs-on: ubuntu-latest
+      steps:
+        - name: downloading artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: uploading path
+            path: my-path
+        - name: see the content
+          run: ls
+        - name: deploy the build
+          run: echo "deploying..." 
