--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -18,9 +18,13 @@ jobs:
             with:
               node-version: '20'
           - name: install dependencies
-            run: npm ci
+            run: npm ci  
           - name: unit-test
-            run: npm run test  
+            run: npm run test
+          - name: see the github-token
+            run: echo '${{ secrets.GITHUB_TOKEN }}'
+          - name: check github run number
+            run: echo ${{ github.run-number}}
     build-project:
         needs: unit-test 
         runs-on: ubuntu-latest
