--- a/.github/workflows/job-if.yaml
+++ b/.github/workflows/job-if.yaml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' || github.event_name == 'push'
     steps:
       - name: Deploy application
         run: echo "Deploying application"
