--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -28,6 +28,7 @@ jobs:
     build-project:
         needs: unit-test 
         runs-on: ubuntu-latest
+        continue-on-error: true
         steps:
           - name: checking-out the code
             uses: actions/checkout@v4
