--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -10,8 +10,11 @@ on:
   workflow_dispatch:  
 jobs:
     unit-test:
-        runs-on: ubuntu-latest
-        steps:
+      runs-on: ${{ matrix.os }}
+      strategy:
+        matrix:
+          os: [ubuntu-latest, macos-latest, windows-latest]
+      steps:
           - name: checking-out the code
             uses: actions/checkout@v4
           - name: setup Node
@@ -26,20 +29,7 @@ jobs:
             run: echo '${{ github.triggering_actor }}'
           - name: check github run number
             run: echo '${{ github.run_number}}'
-    build-project:
-        needs: unit-test 
-        runs-on: ubuntu-latest
- #       continue-on-error: true
-        if: failure()
-        steps:
-          - name: checking-out the code
-            uses: actions/checkout@v4
-          - name: setup Node
-            uses: actions/setup-node@v4
-            with:
-              node-version: '20'
-          - name: install dependencies
-            run: npm ci
+
           - name: build-application
             run: npm run build            
           - name: uploading build
@@ -47,17 +37,4 @@ jobs:
             with:
               name: uploading-dist
               path: dist
-            
-    deploy-project:
-      needs: build-project
-      runs-on: ubuntu-latest
-      if: always()
-      steps:
-        - name: downloading artifact
-          uses: actions/download-artifact@v4
-          with:
-            name: uploading-dist
-        - name: see the content
-          run: ls
-        - name: deploy the build
-          run: echo "deploying..." 
+        
