--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -14,6 +14,7 @@ jobs:
       strategy:
         matrix:
           os: [ubuntu-latest, macos-latest, windows-latest]
+          node: [14, 16, 18]
       steps:
           - name: checking-out the code
             uses: actions/checkout@v4
