--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -10,18 +10,18 @@ on:
   workflow_dispatch:  
 jobs:
     unit-test:
-      runs-on: ${{ matrix.os }}
+      runs-on: ${{ matrix.oss }}
       strategy:
         matrix:
-          os: [ubuntu-latest, macos-latest, windows-latest]
-          node: [14, 16, 18]
+          oss: [ubuntu-latest, macos-latest, windows-latest]
+          nodes: [14, 16, 18]
       steps:
           - name: checking-out the code
             uses: actions/checkout@v4
           - name: setup Node
             uses: actions/setup-node@v4
             with:
-              node-version: '20'
+              node-version: ${{ matrix.nodes }}
           - name: install dependencies
             run: npm ci  
           - name: unit-test
@@ -31,11 +31,4 @@ jobs:
           - name: check github run number
             run: echo '${{ github.run_number}}'
 
-          - name: build-application
-            run: npm run build            
-          - name: uploading build
-            uses: actions/upload-artifact@v4
-            with:
-              name: uploading-dist
-              path: dist
         
