--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -14,7 +14,7 @@ jobs:
       strategy:
         matrix:
           oss: [ubuntu-latest, macos-latest, windows-latest]
-          nodes: [14, 16, 18]
+          nodes: [18, 20]
       steps:
           - name: checking-out the code
             uses: actions/checkout@v4
